--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 <span class="education_rounder"></span>
                             </div>
                             <div class="education_data bd-grid">
-                                <h3 class="education_title">DIPLOMA OF ENGINEERING (ELECTRONICS ENGINEERING)</h3>
+                                <h3 class="education_title">DIPLOMA OF ENGINEERING (DIGITAL ELECTRONICS ENGINEERING)</h3>
                                 <span class="education_studies">Shri Bhagubhai Mafatlal Polytechnic</span>
                                 <span class="education_year">07/2015 - 05/2019</span>
                             </div>
