--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#education" class="nav_link">
-                            <i class='bx bx-book nav_icon'></i> EDUCATION
-                        </a>
-                    </li>
-                    <li class="nav_item">
                         <a href="#skills" class="nav_link">
                             <i class='bx bx-receipt nav_icon'></i> SKILLS
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#projects" class="nav_link"><i class='bx bxl-visual-studio nav_icon'></i>
-                            PROJECTS
+                        <a href="#education" class="nav_link">
+                            <i class='bx bx-book nav_icon'></i> EDUCATION
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#projects" class="nav_link">
+                            <i class='bx bx-chip nav_icon'></i> PROJECTS
                         </a>
                     </li>
                     <li class="nav_item">
